--- a/to-be-deleted.tex
+++ b/to-be-deleted.tex
@@ -20,6 +20,46 @@
 }
 \makeatother
 
+\usepackage{color}
+\usepackage{fancyvrb}
+\newcommand{\VerbBar}{|}
+\newcommand{\VERB}{\Verb[commandchars=\\\{\}]}
+\DefineVerbatimEnvironment{Highlighting}{Verbatim}{commandchars=\\\{\}}
+% Add ',fontsize=\small' for more characters per line
+\usepackage{framed}
+\definecolor{shadecolor}{RGB}{248,248,248}
+\newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
+\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\NormalTok}[1]{#1}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
 
 % disable code chunks background
 %\renewenvironment{Shaded}{}{}
@@ -97,67 +137,26 @@ Single-cell RNA sequencing, expression variability, transcriptional noise, diffe
 \clearpage
 \pagestyle{main}
 
-\hypertarget{reproducibility}{%
-\subsection{Reproducibility}\label{reproducibility}}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(SingleCellExperiment)}
+\KeywordTok{library}\NormalTok{(scater)}
+\KeywordTok{library}\NormalTok{(scran)}
+\KeywordTok{library}\NormalTok{(BASiCS)}
+\end{Highlighting}
+\end{Shaded}
 
-The following software versions were used throughout this workflow:
+\hypertarget{qc-and-exploratory-analysis}{%
+\subsection{QC and exploratory analysis}\label{qc-and-exploratory-analysis}}
 
-\begin{itemize}
-\item
-  \textbf{R version}: R Under development (unstable) (2020-01-28 r77738)
-\item
-  \textbf{Bioconductor version}: 3.11
-\item
-  \textbf{R packages}: BASiCS 1.99.1, scran
-  1.15.29, scater 1.15.32. Version
-  numbers for all remaining packages is available at \protect\hyperlink{session-info}{Session Info}.
-\end{itemize}
+As an initial step, we remove lowly expressed genes whose expression was
+largely not detected through sequencing.
+More specifically, we exclude genes whose expression was detected in less than
+2 cells and those for which their average read count is below 1.
 
-A Docker image containing all software requirements is available at {[}ADD LINK{]}.
-
-\hypertarget{Tcells}{%
-\section{\texorpdfstring{C1 Fluidigm data: Analysis of naive CD4\textsuperscript{+} T cells}{C1 Fluidigm data: Analysis of naive CD4+ T cells}}\label{Tcells}}
-
-For the first case study, we will use scRNA-seq data of CD4\textsuperscript{+} T cells, which
-were processed using the C1 Single-Cell Auto Prep System (Fluidigm\textsuperscript{®}) using
-10--17 \(\mu{}m\) integrated fluidic circuits (IFCs).
-Martinez-Jimenez \emph{et al.} profiled naive and activated CD4\textsuperscript{+} T cells from
-young and old animals across two mouse strains to test for changes in
-expression variability that occur during organismal ageing
-\citep{Martinez-jimenez2017}. They extracted naive or effector memory CD4\textsuperscript{+} T cells
-from spleens of young or old animals and filtered using either
-magnetic-activated cell sorting (MACS) or fluorescence activated cell sorting
-(FACS) (labelled as MACS-purified Naive, FACS-purified Naive or FACS-purified
-Effector Memory).
-For clarification, naive CD4\textsuperscript{+} T cells are also referred to as `unstimulated'
-CD4\textsuperscript{+} T cells.
-
-In addition to profiling naive CD4\textsuperscript{+} T cells, the authors stimulated half
-of the naive cells for 3 hours using \emph{in vitro} antibody stimulation (labelled
-as Active).
-They processed naive as well as activated CD4\textsuperscript{+} T cells using the
-C1 Fluidigm\textsuperscript{®} system to capture and lyse cells, and to reverse transcribe
-and amplify mRNA prior to sequencing.
-The authors isolated cells from B6 (C57BL/6J, \emph{Mus musculus domesticus}) and
-CAST (\emph{Mus musculus castaneus}) animals to profile the evolutionary conservation
-of transcriptional dynamics during ageing.
-Additionally, the authors added external spike-in RNA to aid in quantifying
-technical variability across all cells. They performed all experiments in
-replicates (also referred to as batches) to control for batch effects.
-
-We will begin the workflow with obtaining the data before quality control,
-running the BASiCS model, and performing further downstream analysis.
-
-\hypertarget{obtaining-the-data}{%
-\subsection{Obtaining the data}\label{obtaining-the-data}}
-
-The raw counts of the full dataset can be obtained from ArrayExpress under the
-accession number
-\href{https://www.ebi.ac.uk/arrayexpress/experiments/E-MTAB-4888/}{E-MTAB-4888}.
-In this dataset, the column names contain the library identifier of the original
-experiment, while the row names of the matrix store gene names.
-The dataset contains reads mapped to ERCC spike-in genes \citep{Rna2005}, which
-\texttt{BASiCS} uses to estimate and remove technical noise.
+These thresholds need to be set specifically for each dataset, and careful
+gene-specific quality metrics need to be closely examined as suggested by the
+\emph{\href{https://bioconductor.org/packages/3.11/SimpleSingleCell}{SimpleSingleCell}} Bioconductor workflow \citep{Lun2016}.
 
 {\small\bibliography{Workflow.bib}}
 
